--- a/index.html
+++ b/index.html
@@ -15,26 +15,24 @@
       <div class="logo">
         <a href="#">Hablu Programmer</a>
       </div>
-      <div class="searchArea">
+      <div class="search-area">
         <div class="searchBox">
           <i class="fas fa-search"></i>
+          <input type="search" placeholder="search" />
         </div>
       </div>
 
       <div class="section1">
         <img src="images/undraw_add_color_19gv.svg" alt="" />
       </div>
-      <div class="section1Button">
-        <h1>
-          SU<span class="color">MM</span>ER COLLECT<span class="color"
-            >ION</span
-          >
-        </h1>
+      <div class="section1-button">
+        <h1>SU<span class="color">MM</span>ER</h1>
+        <h2>COLLECT<span class="color">ION</span></h2>
         <button class="btn1">Buy Now</button>
       </div>
 
       <div class="icon-area">
-        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
