--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       <div class="logo">
         <a href="#">Hablu Programmer</a>
       </div>
+
       <div class="search-area">
-        <div class="searchBox">
+        <div class="search-box">
           <i class="fas fa-search"></i>
           <input type="search" placeholder="search" />
         </div>
@@ -25,6 +26,7 @@
       <div class="section1">
         <img src="images/undraw_add_color_19gv.svg" alt="" />
       </div>
+
       <div class="section1-button">
         <h1>SU<span class="color">MM</span>ER</h1>
         <h2>COLLECT<span class="color">ION</span></h2>
@@ -38,5 +40,53 @@
         <a href="#"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
+
+    <section class="product-section">
+      <h3>New <span>Bags</span> Collection</h3>
+
+      <div class="product">
+        <div class="product-box">
+          <img src="images/undraw_shopping_app_flsj.svg" alt="" />
+          <p>Black Genuine Leather Bags.</p>
+          <a href="#">$23.3</a>
+          <a href="" class="buy-btn">Add To Cart</a>
+        </div>
+
+        <div class="product-box">
+          <img src="images/undraw_shopping_app_flsj.svg" alt="" />
+          <p>Black Genuine Leather Bags.</p>
+          <a href="#">$23.3</a>
+          <a href="" class="buy-btn">Add To Cart</a>
+        </div>
+
+        <div class="product-box">
+          <img src="images/undraw_shopping_app_flsj.svg" alt="" />
+          <p>Black Genuine Leather Bags.</p>
+          <a href="#">$23.3</a>
+          <a href="" class="buy-btn">Add To Cart</a>
+        </div>
+
+        <div class="product-box">
+          <img src="images/undraw_shopping_app_flsj.svg" alt="" />
+          <p>Black Genuine Leather Bags.</p>
+          <a href="#">$23.3</a>
+          <a href="" class="buy-btn">Add To Cart</a>
+        </div>
+
+        <div class="product-box">
+          <img src="images/undraw_shopping_app_flsj.svg" alt="" />
+          <p>Black Genuine Leather Bags.</p>
+          <a href="#">$23.3</a>
+          <a href="" class="buy-btn">Add To Cart</a>
+        </div>
+
+        <div class="product-box">
+          <img src="images/undraw_shopping_app_flsj.svg" alt="" />
+          <p>Black Genuine Leather Bags.</p>
+          <a href="#">$23.3</a>
+          <a href="" class="buy-btn">Add To Cart</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
