Complete markup & design of about section

--- a/index.html
+++ b/index.html
@@ -88,5 +88,25 @@
         </div>
       </div>
     </section>
+
+    <section class="about">
+      <div class="about-box">
+        <h1>About Company</h1>
+        <h4>
+          Small E-Commerce Plateform 2021 New Arrivals Mini Messenger
+          <span>Buy Now</span>
+        </h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum velit
+          porro labore dignissimos, corporis libero asperiores laudantium
+          adipisci autem quidem! Autem rerum ipsum eius? Quisquam error
+          perspiciatis doloribus alias culpa.
+        </p>
+      </div>
+
+      <div class="about-box">
+        <img src="images/undraw_heatmap_uyye.svg " alt="" />
+      </div>
+    </section>
   </body>
 </html>
