Complete e-commerce site 1

--- a/index.html
+++ b/index.html
@@ -105,8 +105,69 @@
       </div>
 
       <div class="about-box">
-        <img src="images/undraw_heatmap_uyye.svg " alt="" />
+        <img src="images/undraw_heatmap_uyye.svg" alt="" />
       </div>
     </section>
+
+    <section class="product-section">
+      <h3>Watch<span>es</span> <span>Show</span>case</h3>
+
+      <div class="product">
+        <div class="product-box">
+          <img src="images/undraw_watch_application_uhc9.svg" alt="" />
+          <p>Black Genuine Leather Bags.</p>
+          <a href="#">$23.3</a>
+          <a href="" class="buy-btn">Add To Cart</a>
+        </div>
+
+        <div class="product-box">
+          <img src="images/undraw_in_no_time_6igu.svg" alt="" />
+          <p>Black Genuine Leather Bags.</p>
+          <a href="#">$23.3</a>
+          <a href="" class="buy-btn">Add To Cart</a>
+        </div>
+
+        <div class="product-box">
+          <img src="images/undraw_smartwatch_74tv.svg" alt="" />
+          <p>Black Genuine Leather Bags.</p>
+          <a href="#">$23.3</a>
+          <a href="" class="buy-btn">Add To Cart</a>
+        </div>
+
+        <div class="product">
+          <div class="product-box">
+            <img src="images/undraw_watch_application_uhc9.svg" alt="" />
+            <p>Black Genuine Leather Bags.</p>
+            <a href="#">$23.3</a>
+            <a href="" class="buy-btn">Add To Cart</a>
+          </div>
+  
+          <div class="product-box">
+            <img src="images/undraw_in_no_time_6igu.svg" alt="" />
+            <p>Black Genuine Leather Bags.</p>
+            <a href="#">$23.3</a>
+            <a href="" class="buy-btn">Add To Cart</a>
+          </div>
+  
+          <div class="product-box">
+            <img src="images/undraw_smartwatch_74tv.svg" alt="" />
+            <p>Black Genuine Leather Bags.</p>
+            <a href="#">$23.3</a>
+            <a href="" class="buy-btn">Add To Cart</a>
+          </div>
+      </div>
+    </section>
+
+    <section class="notification">
+      <h1>Subscribe for New Product Notifications</h1>
+      <div class="notification-input">
+        <input type="email" placeholder="Enter your email">
+        <a href="" class="notification-button">SEND</a>
+      </div>
+    </section>
+    <hr>
+    <footer>
+      <p>&copy; AllRight Reserved by Hablu Programmer</p>
+    </footer>
   </body>
 </html>
